--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -69,39 +69,82 @@
                         </ul>
                     </div>
 
-                    <div class="d-flex justify-content-between align-items-center">
-                        <img src="../images/search.svg" style="height: 3.5vh;">
-                        <div class="search-container">
-                            <input type="text" placeholder="Search Literature..." name="search" id="searchInput">
-                        </div>
-                    </div>
-
                 </div>
 
             </nav>
 
         </header>
 
-        <section>
+        <section class="d-flex flex-column align-items-center text-center">
 
-            <button id="openPopup">Open Popup</button>
+            <div class="sectionContentHolderClear mt-4 mb-4">
 
-            <div id="popup" class="popup">
-                <div class="popup-content">
-                    <h1>Review [book_title]</h1>
-                    <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
-                    <form>
-                        <fieldset class="mb-4">
-                            <label> Rate this literature out of 5 stars. </label>
-                        </fieldset>
-                        <fieldset class="mb-4">
-                            <label> Share your thoughts on this literature. </label>
-                            <textarea rows="5" style="width: 75%;"></textarea>
-                        </fieldset>
-                        <button type="submit" class="mainButtonBrownSmall mb-4">Submit Review</button>
-                    </form>
+                <div class="browserContainer">
+
+                    <div class="filter">
+                        <div class="filterTitle mb-2"> Select Filters for your Search </div>
+                        <form>
+                            <hr style="background-color: var(--offWhite);" class="mb-4">
+                            <fieldset class="mb-4">
+                                <label> Search by Title/Author </label>
+                                <input type="text" placeholder="Search Title/Author..." name="search" id="searchInput" style="margin-left: 0;">
+                            </fieldset>
+                            <fieldset class="mb-4">
+                                <label> Minimum Rating </label>
+                            </fieldset>
+                            <fieldset class="mb-4">
+                                <label> Maximum Rating </label> 
+                            </fieldset>
+                            <fieldset class="mb-4">
+                                <label> Publish Date Range </label> 
+                            </fieldset>
+                        </form>
+                        <div class="flexBottom">
+                            <a href="#"><img src="../images/left.svg" style="width: 1vw;"></a>
+                            <span style="margin-left: 1vw; margin-right: 1vw;">1 / 5</span>
+                            <a href="#"><img src="../images/right.svg" style="width: 1vw;"></a>
+                        </div>
+                    </div>
+
+                    <div class="lit">
+                        <div class="coverImgContainer"> <img src="../images/bookCoverDefault.svg" class="coverImage"> </div>
+                        <div class="litTitle"> To Kill a Mockingbird </div>
+                        <div class="litAuthor"> By Harper Lee </div>
+                        <div class="litRating"> 
+                            5/5 Stars | <a href="#"> View Reviews (10) </a>
+                        </div>
+                        <div class="iconsContainer">
+                            <button class="unstyled-button"> <img class="icon" src="../images/addToCollection.svg" title="Add to Collection"> </button>
+                            <button type="button" class="unstyled-button" id="openPopup"> <img class="icon" src="../images/review.svg" title="Leave a Review"> </button>
+                        </div>
+                    </div>
+                    <div class="lit">3</div>
+                    <div class="lit">4</div>
+                    <div class="lit">5</div>
+
                 </div>
-                <span class="close">&times;</span>
+
+                <div id="popup" class="popup">
+                    <div class="popup-content">
+                        <h1 style="font-weight: bold;">Review [book_title]</h1>
+                        <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
+                        <form>
+                            <fieldset class="mb-4">
+                                <label> Rate this literature out of 5 stars. </label>
+                            </fieldset>
+                            <fieldset class="mb-4">
+                                <label> What date did you finish reading this literature? </label>
+                            </fieldset>
+                            <fieldset class="mb-4">
+                                <label> Share your thoughts on this literature. </label>
+                                <textarea rows="5" style="width: 75%;"></textarea>
+                            </fieldset>
+                            <button type="submit" class="mainButtonBrownSmall mb-4">Submit Review</button>
+                        </form>
+                    </div>
+                    <span class="close">&times;</span>
+                </div>
+
             </div>
 
         </section>
@@ -117,6 +160,7 @@
         <!-- Script for checking user login and logout functionality-->
         <script type="module" src="../js/session.js"></script>
 
+        <!-- Script for review popup -->
         <script>
             document.addEventListener("DOMContentLoaded", () => {
                 const popup = document.getElementById("popup");
@@ -132,13 +176,6 @@
 
                 closeBtn.addEventListener("click", () => {
                     popup.style.display = "none";
-                });
-
-                // Optional: close popup when clicking outside the content
-                window.addEventListener("click", (event) => {
-                    if (event.target === popup) {
-                        popup.style.display = "none";
-                    }
                 });
             });
         </script>
