--- a/frontend/subpages/contactUs.html
+++ b/frontend/subpages/contactUs.html
@@ -69,6 +69,13 @@
                         </ul>
                     </div>
 
+                    <div class="d-flex justify-content-between align-items-center">
+                        <img src="../images/search.svg" style="height: 3.5vh;">
+                        <div class="search-container">
+                            <input type="text" placeholder="Search Literature..." name="search" id="searchInput">
+                        </div>
+                    </div>
+
                 </div>
 
             </nav>
