--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -89,14 +89,43 @@
                                 <label> Search by Title/Author </label>
                                 <input type="text" placeholder="Search Title/Author..." name="search" id="searchInput" style="margin-left: 0;">
                             </fieldset>
-                            <fieldset class="mb-4">
-                                <label> Minimum Rating </label>
+                            <fieldset class="star-rating mb-1">
+                                <label> Minimum Rating </label> <br>
+                                <div class="stars">
+                                    <input type="radio" id="star5" name="rating" value="5">
+                                    <label for="star5" title="5 stars">&#9733;</label>
+                                    <input type="radio" id="star4" name="rating" value="4">
+                                    <label for="star4" title="4 stars">&#9733;</label>
+                                    <input type="radio" id="star3" name="rating" value="3">
+                                    <label for="star3" title="3 stars">&#9733;</label>
+                                    <input type="radio" id="star2" name="rating" value="2">
+                                    <label for="star2" title="2 stars">&#9733;</label>
+                                    <input type="radio" id="star1" name="rating" value="1">
+                                    <label for="star1" title="1 star">&#9733;</label>
+                                </div>
+                            </fieldset>
+                            <fieldset class="star-rating mb-1">
+                                <label> Maximum Rating </label> <br>
+                                <div class="stars">
+                                    <input type="radio" id="star5" name="rating" value="5">
+                                    <label for="star5" title="5 stars">&#9733;</label>
+                                    <input type="radio" id="star4" name="rating" value="4">
+                                    <label for="star4" title="4 stars">&#9733;</label>
+                                    <input type="radio" id="star3" name="rating" value="3">
+                                    <label for="star3" title="3 stars">&#9733;</label>
+                                    <input type="radio" id="star2" name="rating" value="2">
+                                    <label for="star2" title="2 stars">&#9733;</label>
+                                    <input type="radio" id="star1" name="rating" value="1">
+                                    <label for="star1" title="1 star">&#9733;</label>
+                                </div>
                             </fieldset>
                             <fieldset class="mb-4">
-                                <label> Maximum Rating </label> 
+                                <label> Publish Date Range Start </label> 
+                                <input type="date" id="pubDateStart" style="margin-left: 0;">
                             </fieldset>
                             <fieldset class="mb-4">
-                                <label> Publish Date Range </label> 
+                                <label> Publish Date Range End </label> 
+                                <input type="date" id="pubDateEnd" style="margin-left: 0;">
                             </fieldset>
                         </form>
                         <div class="flexBottom">
@@ -111,16 +140,49 @@
                         <div class="litTitle"> To Kill a Mockingbird </div>
                         <div class="litAuthor"> By Harper Lee </div>
                         <div class="litRating"> 
-                            5/5 Stars | <a href="#"> View Reviews (10) </a>
+                            &#9733; &#9733; &#9733; &#9733; &#9733; | <a href="#"> View Reviews (10) </a>
                         </div>
                         <div class="iconsContainer">
                             <button class="unstyled-button"> <img class="icon" src="../images/addToCollection.svg" title="Add to Collection"> </button>
                             <button type="button" class="unstyled-button" id="openPopup"> <img class="icon" src="../images/review.svg" title="Leave a Review"> </button>
                         </div>
                     </div>
-                    <div class="lit">3</div>
-                    <div class="lit">4</div>
-                    <div class="lit">5</div>
+                    <div class="lit">
+                        <div class="coverImgContainer"> <img src="../images/bookCoverDefault.svg" class="coverImage"> </div>
+                        <div class="litTitle"> To Kill a Mockingbird </div>
+                        <div class="litAuthor"> By Harper Lee </div>
+                        <div class="litRating"> 
+                            &#9733; &#9733; &#9733; &#9733; &#9733; | <a href="#"> View Reviews (10) </a>
+                        </div>
+                        <div class="iconsContainer">
+                            <button class="unstyled-button"> <img class="icon" src="../images/addToCollection.svg" title="Add to Collection"> </button>
+                            <button type="button" class="unstyled-button" id="openPopup"> <img class="icon" src="../images/review.svg" title="Leave a Review"> </button>
+                        </div>
+                    </div>
+                    <div class="lit">
+                        <div class="coverImgContainer"> <img src="../images/bookCoverDefault.svg" class="coverImage"> </div>
+                        <div class="litTitle"> To Kill a Mockingbird </div>
+                        <div class="litAuthor"> By Harper Lee </div>
+                        <div class="litRating"> 
+                            &#9733; &#9733; &#9733; &#9733; &#9733; | <a href="#"> View Reviews (10) </a>
+                        </div>
+                        <div class="iconsContainer">
+                            <button class="unstyled-button"> <img class="icon" src="../images/addToCollection.svg" title="Add to Collection"> </button>
+                            <button type="button" class="unstyled-button" id="openPopup"> <img class="icon" src="../images/review.svg" title="Leave a Review"> </button>
+                        </div>
+                    </div>
+                    <div class="lit">
+                        <div class="coverImgContainer"> <img src="../images/bookCoverDefault.svg" class="coverImage"> </div>
+                        <div class="litTitle"> To Kill a Mockingbird </div>
+                        <div class="litAuthor"> By Harper Lee </div>
+                        <div class="litRating"> 
+                            &#9733; &#9733; &#9733; &#9733; &#9733; | <a href="#"> View Reviews (10) </a>
+                        </div>
+                        <div class="iconsContainer">
+                            <button class="unstyled-button"> <img class="icon" src="../images/addToCollection.svg" title="Add to Collection"> </button>
+                            <button type="button" class="unstyled-button" id="openPopup"> <img class="icon" src="../images/review.svg" title="Leave a Review"> </button>
+                        </div>
+                    </div>
 
                 </div>
 
