--- a/frontend/userPages/settings.html
+++ b/frontend/userPages/settings.html
@@ -138,7 +138,27 @@
                         <hr style="background-color: var(--darkBrown);">
                         <form>
                             <fieldset>
-                                <label> Choose Profile Picture </label>
+                                <label> Choose Profile Picture </label> <br>
+                                <button class="buttonPFP"> <img src="../images/pfp/1.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/2.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/3.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/4.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/5.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/6.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/7.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/8.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/9.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/10.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/11.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/12.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/13.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/14.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/15.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/16.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/17.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/18.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/19.svg"> </button>
+                                <button class="buttonPFP"> <img src="../images/pfp/20.svg"> </button>
                             </fieldset>
                             <fieldset>
                                 <label> Set Bio </label>
