--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -24,7 +24,7 @@
 
                     <div class="dropdown d-flex justify-content-center right-div">
                         <button class="unstyled-button" data-toggle="dropdown">
-                            <img class="PFPImg" src="../images/loggedOutPFP.svg" alt="pfp">
+                            <img class="PFPImg" id="navProfileImg" src="../images/loggedOutPFP.svg" alt="pfp">
                         </button>
                         <div class="dropdown-menu text-center">
                             <a class="dropdown-item" href="../userPages/profile.html">My Profile</a>
@@ -84,72 +84,59 @@
 
         <section>
 
-            <div class="d-flex flex-column align-items-center text-center">
-                <div class="sectionContentHolderGreen">
-                    <img src="../images/loggedOutPFP.svg" class="userPFP mb-2">
-                    <div class="userName">UserName#0000</div>
+            <div class="d-flex flex-column align-items-center text-center mt-4">
+                <div class="sectionContentHolderGreen p-4">
+                    <img id="profileAvatar" src="../images/loggedOutPFP.svg" class="userPFP mb-2">
+                    <div id="profileUsername" class="userName">Loading...</div>
+                    <div id="profileCreatedAt"></div>
+                    <button id="editProfileBtn" class="mainButtonBrownSmall mt-3">Edit Profile</button>
                 </div>
             </div>
-            <div class="d-flex align-items-center text-center">
 
-                <span class="thirdSectionBrown">
-                    <div class="thirdSectionTopperBrown"> About Me </div>
+            <!-- Editable profile modal -->
+            <div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="editProfileModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content p-4">
+                        <h5 class="modal-title mb-3" id="editProfileModalLabel">Edit Your Profile</h5>
+                        <label>Bio</label>
+                        <textarea id="bioInput" class="form-control mb-2"></textarea>
+                        <label>Favorite Genres</label>
+                        <input id="genresInput" type="text" class="form-control mb-2" placeholder="e.g., Mystery, Horror, Romance">
+                        <label>Favorite Book</label>
+                        <input id="bookInput" type="text" class="form-control mb-3" placeholder="e.g., To Kill a Mockingbird">
+                        <label>Profile Picture</label>
+                        <input id="avatarUpload" type="file" accept="image/*" class="form-control-file mb-3">
+                        <button id="saveProfileBtn" class="btn btn-success">Save Changes</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="d-flex flex-wrap justify-content-center text-center mt-4">
+
+                <span class="thirdSectionBrown m-3">
+                    <div class="thirdSectionTopperBrown">About Me</div>
                     <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Bio </div>
-                        Here's a small blurb about me and what I enjoy reading. Check out my profile!
+                        <div style="font-weight: bold; font-size: 3vh;">Bio</div>
+                        <div id="profileBio">Here's a small blurb about me and what I enjoy reading. Check out my profile!</div>
                     </div>
                     <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Favorite Genres </div>
-                        Mystery, Horror, Romance
+                        <div style="font-weight: bold; font-size: 3vh;">Favorite Genres</div>
+                        <div id="profileGenres">Mystery, Horror, Romance</div>
                     </div>
                     <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Favorite Book </div>
-                        How to Kill a Mockingbird
-                    </div>
-                    <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Member Since </div>
-                        October 22nd, 2025
+                        <div style="font-weight: bold; font-size: 3vh;">Favorite Book</div>
+                        <div id="profileBook">To Kill a Mockingbird</div>
                     </div>
                 </span>
 
-                <span class="thirdSectionBrown">
-                    <div class="thirdSectionTopperBrown"> My Reads </div>
-                    <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Book One </div>
-                        I really liked this book. Here's some info on why I liked this book so much.
-                    </div>
-                    <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Book Two </div>
-                        Example review.
-                    </div>
-                    <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Book Three </div>
-                        Example review.
-                    </div>
-                    <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Book Four </div>
-                        Example review.
-                    </div>
+                <span class="thirdSectionBrown m-3">
+                    <div class="thirdSectionTopperBrown">My Reads</div>
+                    <div id="profileReads" class="thirdSectionText">Loading Your Reads...</div>
                 </span>
 
-                <span class="thirdSectionBrown">
-                    <div class="thirdSectionTopperBrown"> My Collections </div>
-                    <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Collection One </div>
-                        Here's a description on what kinds of literature I filled this collection with.
-                    </div>
-                    <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Collection Two </div>
-                        Example collection decription.
-                    </div>
-                    <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Collection Three </div>
-                        Example collection decription.
-                    </div>
-                    <div class="thirdSectionText">
-                        <div style="font-weight: bold; font-size: 3vh;"> Collection Four </div>
-                        Example collection decription.
-                    </div>
+                <span class="thirdSectionBrown m-3">
+                    <div class="thirdSectionTopperBrown">My Collections</div>
+                    <div id="profileCollections" class="thirdSectionText">Loading Your Collections...</div>
                 </span>
             </div>
         </section>
@@ -164,6 +151,9 @@
 
         <!-- Script for checking user login and logout functionality-->
         <script type="module" src="../js/session.js"></script>
+
+        <!-- Profile Script-->
+        <script type="module" src="../js/profile.js"></script>
     </body>
 
 </html>
