added formatting for settings page

--- a/frontend/userPages/settings.html
+++ b/frontend/userPages/settings.html
@@ -139,35 +139,46 @@
                         <form>
                             <fieldset>
                                 <label> Choose Profile Picture </label> <br>
-                                <button class="buttonPFP"> <img src="../images/pfp/1.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/2.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/3.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/4.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/5.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/6.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/7.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/8.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/9.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/10.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/11.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/12.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/13.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/14.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/15.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/16.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/17.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/18.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/19.svg"> </button>
-                                <button class="buttonPFP"> <img src="../images/pfp/20.svg"> </button>
+                                <div class="pfpContainer">
+                                    <button class="buttonPFP"> <img src="../images/pfp/1.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/2.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/3.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/4.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/5.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/6.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/7.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/8.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/9.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/10.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/11.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/12.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/13.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/14.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/15.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/16.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/17.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/18.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/19.svg"> </button>
+                                    <button class="buttonPFP"> <img src="../images/pfp/20.svg"> </button>
+                                </div>
                             </fieldset>
                             <fieldset>
-                                <label> Set Bio </label>
+                                <label> Set Bio </label> <br>
+                                <textarea style="width: 75%;" rows="5"></textarea> <br>
+                                <button type="submit" class="mainButtonBrownXSmall mt-2" id="submitReview">Update Bio</button>
                             </fieldset>
                             <fieldset>
-                                <label> Choose Favorite Genres </label>
+                                <label> Choose Favorite Genres </label> <br>
+                                <select style="width: 75%;"">
+                                    <option> Horror </option>
+                                    <option> Comedy </option>
+                                    <option> Romance </option>
+                                </select> <br>
+                                <button type="submit" class="mainButtonBrownXSmall mt-2" id="submitReview">Add to Favorites</button>
                             </fieldset>
                             <fieldset>
-                                <label> Choose Favorite Book </label>
+                                <label> Favorite Book </label> <br>
+                                <input type="text" style="width: 75%; margin-left: 0;">
                             </fieldset>
                         </form>
                         <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
