Choose from pre-defined profile images

--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -104,8 +104,8 @@
                         <input id="genresInput" type="text" class="form-control mb-2" placeholder="e.g., Mystery, Horror, Romance">
                         <label>Favorite Book</label>
                         <input id="bookInput" type="text" class="form-control mb-3" placeholder="e.g., To Kill a Mockingbird">
-                        <label>Profile Picture</label>
-                        <input id="avatarUpload" type="file" accept="image/*" class="form-control-file mb-3">
+                        <label>Choose a Profile Picture</label>
+                        <div id="avatarOptions" class="d-flex flex-wrap justify-content-center mb-3"></div>
                         <button id="saveProfileBtn" class="btn btn-success">Save Changes</button>
                     </div>
                 </div>
