--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,12 +69,10 @@
                         </ul>
                     </div>
 
-                    <div class="d-flex justify-content-between align-items-center">
-                        <img src="images/search.svg" style="height: 3.5vh;">
-                        <div class="search-container">
-                            <input type="text" placeholder="Search Literature..." name="search" id="searchInput">
-                        </div>
-                    </div>
+                    <form class="d-flex justify-content-between align-items-center" style="margin: 0;">
+                        <button type="submit" class="unstyled-button"> <img src="images/search.svg" style="height: 3.5vh;"> </button>
+                        <input type="text" placeholder="Search Literature..." name="search" id="searchInput">
+                    </form>
 
                 </div>
 
