--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -82,56 +82,49 @@
                 <div class="browserContainer" id="results">
 
                     <div class="filter">
-                        <div class="filterTitle mb-2"> Select Filters for your Search </div>
+                        <div class="filterTitle mb-0"> Select Filters for your Search </div>
+                        <hr style="background-color: var(--offWhite); width: 100%;" class="mt-0">
                         <form>
-                            <hr style="background-color: var(--offWhite);" class="mb-4">
                             <fieldset class="mb-4">
                                 <label> Search by Title/Author </label>
                                 <input type="text" placeholder="Search Title/Author..." name="search" id="searchInput" style="margin-left: 0;">
                             </fieldset>
-                            <fieldset class="star-rating mb-1">
+                            <fieldset class="mb-3">
                                 <label> Minimum Rating </label> <br>
                                 <div class="stars">
-                                    <input type="radio" id="star5" name="rating" value="5">
-                                    <label for="star5" title="5 stars">&#9733;</label>
-                                    <input type="radio" id="star4" name="rating" value="4">
-                                    <label for="star4" title="4 stars">&#9733;</label>
-                                    <input type="radio" id="star3" name="rating" value="3">
-                                    <label for="star3" title="3 stars">&#9733;</label>
-                                    <input type="radio" id="star2" name="rating" value="2">
-                                    <label for="star2" title="2 stars">&#9733;</label>
-                                    <input type="radio" id="star1" name="rating" value="1">
-                                    <label for="star1" title="1 star">&#9733;</label>
+                                    <input type="radio" id="min5" name="minRating" value="5"> <label for="min5" style="font-size: 3vh;">&#9733;</label>
+                                    <input type="radio" id="min4" name="minRating" value="4"> <label for="min4" style="font-size: 3vh;">&#9733;</label>
+                                    <input type="radio" id="min3" name="minRating" value="3"> <label for="min3" style="font-size: 3vh;">&#9733;</label>
+                                    <input type="radio" id="min2" name="minRating" value="2"> <label for="min2" style="font-size: 3vh;">&#9733;</label>
+                                    <input type="radio" id="min1" name="minRating" value="1"> <label for="min1" style="font-size: 3vh;">&#9733;</label>
                                 </div>
                             </fieldset>
-                            <fieldset class="star-rating mb-1">
+                            <fieldset class="mb-3">
                                 <label> Maximum Rating </label> <br>
                                 <div class="stars">
-                                    <input type="radio" id="star5" name="rating" value="5">
-                                    <label for="star5" title="5 stars">&#9733;</label>
-                                    <input type="radio" id="star4" name="rating" value="4">
-                                    <label for="star4" title="4 stars">&#9733;</label>
-                                    <input type="radio" id="star3" name="rating" value="3">
-                                    <label for="star3" title="3 stars">&#9733;</label>
-                                    <input type="radio" id="star2" name="rating" value="2">
-                                    <label for="star2" title="2 stars">&#9733;</label>
-                                    <input type="radio" id="star1" name="rating" value="1">
-                                    <label for="star1" title="1 star">&#9733;</label>
+                                    <input type="radio" id="max5" name="maxRating" value="5"> <label for="max5" style="font-size: 3vh;">&#9733;</label>
+                                    <input type="radio" id="max4" name="maxRating" value="4"> <label for="max4" style="font-size: 3vh;">&#9733;</label>
+                                    <input type="radio" id="max3" name="maxRating" value="3"> <label for="max3" style="font-size: 3vh;">&#9733;</label>
+                                    <input type="radio" id="max2" name="maxRating" value="2"> <label for="max2" style="font-size: 3vh;">&#9733;</label>
+                                    <input type="radio" id="max1" name="maxRating" value="1"> <label for="max1" style="font-size: 3vh;">&#9733;</label>
                                 </div>
                             </fieldset>
                             <fieldset class="mb-4">
                                 <label> Publish Date Range Start </label> 
                                 <input type="date" id="pubDateStart" style="margin-left: 0;">
                             </fieldset>
-                            <fieldset class="mb-4">
+                            <fieldset class="mb-5">
                                 <label> Publish Date Range End </label> 
                                 <input type="date" id="pubDateEnd" style="margin-left: 0;">
                             </fieldset>
+                            <fieldset class="d-flex justify-content-center">
+                                <button type="submit" class="mainButtonBrownSmall">Apply Filters</button> 
+                            </fieldset>
                         </form>
                         <div class="flexBottom">
-                            <a href="#"><img src="../images/left.svg" style="width: 1vw;"></a>
-                            <span style="margin-left: 1vw; margin-right: 1vw;">1 / 5</span>
-                            <a href="#"><img src="../images/right.svg" style="width: 1vw;"></a>
+                            <button class="unstyled-button" id="backPage"><img src="../images/left.svg" style="width: 1vw;"></button>
+                            <span style="margin-left: 1vw; margin-right: 1vw;" id="pager"> ... </span>
+                            <button class="unstyled-button" id="nextPage"><img src="../images/right.svg" style="width: 1vw;"></button>
                         </div>
                     </div>
 
@@ -142,19 +135,14 @@
                         <h1 style="font-weight: bold;">Review [book_title]</h1>
                         <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
                         <form>     
-                            <fieldset class="star-rating">
-                                <label style="margin-bottom: 0;"> Rate this literature out of 5 stars. </label> <br>
+                            <fieldset class="mb-4">
+                                <label> Rate this literature out of 5 stars. </label> <br>
                                 <div class="stars">
-                                    <input type="radio" id="star5" name="rating" value="5">
-                                    <label for="star5" title="5 stars">&#9733;</label>
-                                    <input type="radio" id="star4" name="rating" value="4">
-                                    <label for="star4" title="4 stars">&#9733;</label>
-                                    <input type="radio" id="star3" name="rating" value="3">
-                                    <label for="star3" title="3 stars">&#9733;</label>
-                                    <input type="radio" id="star2" name="rating" value="2">
-                                    <label for="star2" title="2 stars">&#9733;</label>
-                                    <input type="radio" id="star1" name="rating" value="1">
-                                    <label for="star1" title="1 star">&#9733;</label>
+                                    <input type="radio" id="given5" name="givenRating" value="5"> <label for="given5" style="font-size: 4vh;">&#9733;</label>
+                                    <input type="radio" id="given4" name="givenRating" value="4"> <label for="given4" style="font-size: 4vh;">&#9733;</label>
+                                    <input type="radio" id="given3" name="givenRating" value="3"> <label for="given3" style="font-size: 4vh;">&#9733;</label>
+                                    <input type="radio" id="given2" name="givenRating" value="2"> <label for="given2" style="font-size: 4vh;">&#9733;</label>
+                                    <input type="radio" id="given1" name="givenRating" value="1"> <label for="given1" style="font-size: 4vh;">&#9733;</label>
                                 </div>
                             </fieldset>
                             <fieldset class="mb-4">
@@ -210,8 +198,10 @@
             document.addEventListener("DOMContentLoaded", async () => {
                 const urlParams = new URLSearchParams(window.location.search);
                 const query = urlParams.get("search");
+                const pageCurrent = Number(urlParams.get("page"));
                 const searchInput = document.getElementById("searchInput");
                 const resultsDiv = document.getElementById("results");
+                let pageTotal = 0;
 
                 if (searchInput && query) {
                     searchInput.value = query;
@@ -220,7 +210,7 @@
                 if (!query || !resultsDiv) return;
 
                 try {
-                    const response = await fetch(`/book_router/search?q=${encodeURIComponent(query)}&limit=5&page=1`);
+                    const response = await fetch(`/book_router/search?q=${encodeURIComponent(query)}&limit=50&page=1`);
                     if (!response.ok) throw new Error("Network response not ok");
 
                     const data = await response.json();
@@ -229,29 +219,39 @@
                     resultsCol.classList.add("resultsCol");
 
                     if (data.results && data.results.length > 0) {
-                        data.results.forEach(book => {
-                            const bookDiv = document.createElement("div");
-                            bookDiv.classList.add("lit");
 
-                            bookDiv.innerHTML = `
-                                <div class="coverImgContainer">
-                                    <img src="${book.cover || "../images/bookCoverDefault.svg"}" class="coverImage">
-                                </div>
-                                <div class="litTitle">${book.title || 'No Title'}</div>
-                                <div class="litAuthor">By ${book.authors ? book.authors.join(", ") : 'Unknown'}</div>
-                                <div class="litRating">
-                                    &#9733; &#9733; &#9733; &#9733; &#9733; | <a href="#">View Reviews (10)</a>
-                                </div>
-                                <div class="iconsContainer">
-                                    <button class="unstyled-button">
-                                        <img class="icon" src="../images/addToCollection.svg" title="Add to Collection">
-                                    </button>
-                                    <button type="button" class="unstyled-button openPopup">
-                                        <img class="icon" src="../images/review.svg" title="Leave a Review">
-                                    </button>
-                                </div>
-                            `;
-                            resultsCol.appendChild(bookDiv);
+                        const bookPerPage = 5;
+                        pageTotal = Math.ceil(data.results.length / bookPerPage);
+                        let pager = document.getElementById("pager");
+                        pager.innerHTML = `${pageCurrent} / ${pageTotal}`;
+
+                        let i = 0;
+                        data.results.forEach(book => {
+                            i += 1;
+                            if (i > ((pageCurrent-1) * bookPerPage) && i <= (pageCurrent * bookPerPage)) {
+                                const bookDiv = document.createElement("div");
+                                bookDiv.classList.add("lit");
+
+                                bookDiv.innerHTML = `
+                                    <div class="coverImgContainer">
+                                        <img src="${book.cover || "../images/bookCoverDefault.svg"}" class="coverImage">
+                                    </div>
+                                    <div class="litTitle">${book.title || 'No Title'}</div>
+                                    <div class="litAuthor">By ${book.authors ? book.authors.join(", ") : 'Unknown'}</div>
+                                    <div class="litRating">
+                                        &#9733; &#9733; &#9733; &#9733; &#9733; | <a href="#">View Reviews (10)</a>
+                                    </div>
+                                    <div class="iconsContainer">
+                                        <button class="unstyled-button">
+                                            <img class="icon" src="../images/addToCollection.svg" title="Add to Collection">
+                                        </button>
+                                        <button type="button" class="unstyled-button openPopup">
+                                            <img class="icon" src="../images/review.svg" title="Leave a Review">
+                                        </button>
+                                    </div>
+                                `;
+                                resultsCol.appendChild(bookDiv);
+                            }
                         });
                     } else {
                         resultsCol.innerHTML = "<p>No results found.</p>";
@@ -273,6 +273,28 @@
                 //const popup = document.getElementById("popup");
                 //const closeBtn = document.querySelector(".close");
                 //popup.style.display = "none";
+
+                const back = document.getElementById("backPage");
+                back.addEventListener("click", (event) => {
+                    if (pageCurrent >= 2) {
+                        window.location.href = `/subpages/browse.html?search=${encodeURIComponent(query)}&page=${pageCurrent - 1}`;
+                    }
+                    else {
+                        window.location.href = `/subpages/browse.html?search=${encodeURIComponent(query)}&page=${pageCurrent}`;
+                    }
+
+                });
+
+                const next = document.getElementById("nextPage");
+                next.addEventListener("click", (event) => {
+                    if (pageCurrent < pageTotal) {
+                        window.location.href = `/subpages/browse.html?search=${encodeURIComponent(query)}&page=${pageCurrent + 1}`;
+                    }
+                    else {
+                        window.location.href = `/subpages/browse.html?search=${encodeURIComponent(query)}&page=${pageCurrent}`;
+                    }
+
+                });
             });
         </script>
 
