added add to collection form/popup and formatted style.css page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,8 +18,8 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <a href="index.html"><img class="siteLogoImg" src="/images/logo.svg" alt="Logo"></a>
-                        <a href="index.html" class="siteLogoText">TBRd</a>
+                        <a href="index.html"><img class="site-logo-img" src="/images/logo.svg" alt="Logo"></a>
+                        <a href="index.html" class="site-logo-text">TBRd</a>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
@@ -71,7 +71,7 @@
 
                     <form class="d-flex justify-content-between align-items-center" style="margin: 0;">
                         <button type="submit" class="unstyled-button"> <img src="images/search.svg" style="height: 3.5vh;"> </button>
-                        <input type="text" placeholder="Search Literature..." name="search" id="searchInput">
+                        <input type="text" placeholder="Search Literature..." name="search" id="searchInput" class="searchInput">
                     </form>
 
                 </div>
@@ -81,12 +81,11 @@
         </header>
 
         <section>
-
             <h1 class="title-text"> Welcome to TBRd! </h1>
             <h2 class="sub-title-text"> A community for every type of reader. </h2>
 
             <div class="d-flex flex-column align-items-center text-center">
-                <div class="sectionContentHolderGreen">
+                <div class="section-content-holder-green">
 
                     <p> <h2 style="font-weight: bold; margin: 1vw;"> Our Mission </h2> </p>
                     <p style="margin-bottom: 3vw;">
@@ -114,9 +113,9 @@
 
                     <p> <h2 style="font-weight: bold; margin-top: 3vw;"> Where can I get started? </h2> </p>
                     <div class="d-flex flex-column align-items-center text-center">
-                        <a href="loginPages/createAccount.html"> <button class="mainButtonBrown"> Create an Account </button> </a>
-                        <a href="subpages/browse.html"> <button class="mainButtonBrown"> Start Exploring Our Library </button> </a>
-                        <a href="subpages/trending.html"> <button class="mainButtonBrown"> Check Out What's Trending </button> </a>
+                        <a href="loginPages/createAccount.html"> <button class="main-button-brown"> Create an Account </button> </a>
+                        <a href="subpages/browse.html"> <button class="main-button-brown"> Start Exploring Our Library </button> </a>
+                        <a href="subpages/trending.html"> <button class="main-button-brown"> Check Out What's Trending </button> </a>
                     </div>
 
                 </div>
