--- a/frontend/loginPages/login.html
+++ b/frontend/loginPages/login.html
@@ -18,8 +18,8 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <a href="../index.html"><img class="siteLogoImg" src="../images/logo.svg" alt="Logo"></a>
-                        <a href="../index.html" class="siteLogoText">TBRd</a>
+                        <a href="../index.html"><img class="site-logo-img" src="../images/logo.svg" alt="Logo"></a>
+                        <a href="../index.html" class="site-logo-text">TBRd</a>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
@@ -98,7 +98,7 @@
                     <p id="login-message" class="text-center mt-3" style="background-color: white;"></p>
 
                     <div class="text-center mt-5">
-                        <button type ="submit" class="mainButtonBrownSmall mb-4">Log In</button>
+                        <button type ="submit" class="main-button-brown-small mb-4">Log In</button>
 
                         <div class="text-center mt-4" style="font-weight: bold;">
                             Alternative Sign-in Methods
