--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -18,8 +18,8 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <a href="../index.html"><img class="siteLogoImg" src="../images/logo.svg" alt="Logo"></a>
-                        <a href="../index.html" class="siteLogoText">TBRd</a>
+                        <a href="../index.html"><img class="site-logo-img" src="../images/logo.svg" alt="Logo"></a>
+                        <a href="../index.html" class="site-logo-text">TBRd</a>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
@@ -83,11 +83,11 @@
         <section>
 
             <div class="d-flex flex-column align-items-center text-center mt-4">
-                <div class="sectionContentHolderGreen p-4">
+                <div class="section-content-holder-green p-4">
                     <img id="profileAvatar" src="../images/loggedOutPFP.svg" class="userPFP mb-2">
                     <div id="profileUsername" class="userName">Loading...</div>
                     <div id="profileCreatedAt"></div>
-                    <button id="editProfileBtn" class="mainButtonBrownSmall mt-3">Edit Profile</button>
+                    <button id="editProfileBtn" class="main-button-brown-small mt-3">Edit Profile</button>
                 </div>
             </div>
 
@@ -111,30 +111,30 @@
 
             <div class="d-flex flex-wrap justify-content-center text-center mt-4">
 
-                <span class="thirdSectionBrown m-3">
-                    <div class="thirdSectionTopperBrown">About Me</div>
-                    <div class="thirdSectionText">
+                <span class="third-section-brown m-3">
+                    <div class="third-section-topper-brown">About Me</div>
+                    <div class="third-section-text">
                         <div style="font-weight: bold; font-size: 3vh;">Bio</div>
                         <div id="profileBio">Here's a small blurb about me and what I enjoy reading. Check out my profile!</div>
                     </div>
-                    <div class="thirdSectionText">
+                    <div class="third-section-text">
                         <div style="font-weight: bold; font-size: 3vh;">Favorite Genres</div>
                         <div id="profileGenres">Mystery, Horror, Romance</div>
                     </div>
-                    <div class="thirdSectionText">
+                    <div class="third-section-text">
                         <div style="font-weight: bold; font-size: 3vh;">Favorite Book</div>
                         <div id="profileBook">To Kill a Mockingbird</div>
                     </div>
                 </span>
 
-                <span class="thirdSectionBrown m-3">
-                    <div class="thirdSectionTopperBrown">My Reads</div>
-                    <div id="profileReads" class="thirdSectionText">Loading Your Reads...</div>
+                <span class="third-section-brown m-3">
+                    <div class="third-section-topper-brown">My Reads</div>
+                    <div id="profileReads" class="third-section-text">Loading Your Reads...</div>
                 </span>
 
-                <span class="thirdSectionBrown m-3">
-                    <div class="thirdSectionTopperBrown">My Collections</div>
-                    <div id="profileCollections" class="thirdSectionText">Loading Your Collections...</div>
+                <span class="third-section-brown m-3">
+                    <div class="third-section-topper-brown">My Collections</div>
+                    <div id="profileCollections" class="third-section-text">Loading Your Collections...</div>
                 </span>
             </div>
         </section>
