--- a/frontend/subpages/browse.html
+++ b/frontend/subpages/browse.html
@@ -18,8 +18,8 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <a href="../index.html"><img class="siteLogoImg" src="../images/logo.svg" alt="Logo"></a>
-                        <a href="../index.html" class="siteLogoText">TBRd</a>
+                        <a href="../index.html"><img class="site-logo-img" src="../images/logo.svg" alt="Logo"></a>
+                        <a href="../index.html" class="site-logo-text">TBRd</a>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
@@ -77,7 +77,7 @@
 
         <section class="d-flex flex-column align-items-center text-center">
 
-            <div class="sectionContentHolderClear mt-4 mb-4">
+            <div class="section-content-holder-clear mt-4 mb-4">
 
                 <div class="browserContainer" id="results">
 
@@ -118,7 +118,7 @@
                                 <input type="date" id="pubDateEnd" style="margin-left: 0;">
                             </fieldset>
                             <fieldset class="d-flex justify-content-center">
-                                <button type="submit" class="mainButtonBrownSmall">Apply Filters</button> 
+                                <button type="submit" class="main-button-brown-small">Apply Filters</button> 
                             </fieldset>
                         </form>
                         <div class="flexBottom">
@@ -131,9 +131,9 @@
                 </div>
 
                 <div id="popupBackdrop" class="popupBackdrop"></div>
-                <div id="popup" class="popup">
-                    <div class="popup-content">
-                        <h1 style="font-weight: bold;">Review [book_title]</h1>
+                <div id="popupReview" class="popupReview">
+                    <div class="popup-contentReview">
+                        <h1 style="font-weight: bold;" id="reviewTitle">Review [book_title]</h1>
                         <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
                         <form>     
                             <fieldset class="mb-4">
@@ -154,10 +154,48 @@
                                 <label> Share your thoughts on this literature. </label>
                                 <textarea rows="5" style="width: 75%;" id="reviewText"></textarea>
                             </fieldset>
-                            <button type="submit" class="mainButtonBrownSmall mb-4" id="submitReview">Submit Review</button>
+                            <button type="submit" class="main-button-brown-small mb-4" id="submitReview">Submit Review</button>
                         </form>
                     </div>
-                    <span class="close">&times;</span>
+                    <span class="closeReview">&times;</span>
+                </div>
+                <div id="popupCollection" class="popupCollection">
+                    <div class="popup-contentCollection">
+                        <h1 style="font-weight: bold;" id="collectionTitle">Add [book_title] to Collections</h1>
+                        <hr style="background-color: var(--offWhite); width: 80%;" class="mb-4">
+                        <form>     
+                            <fieldset class="mb-4">
+                                <label> Choose the collections to add this literature to. </label> <br>
+                                <div class="collectionContainer">
+                                    <input type="checkbox" class="collectionSelection m-3" id="c1">
+                                    <img src="../images/collections/1.svg" class="collectionImg">
+                                    <p class="collectionTitle">Collection Title 1</p>
+                                </div>
+                                <div class="collectionContainer">
+                                    <input type="checkbox" class="collectionSelection m-3" id="c2">
+                                    <img src="../images/collections/11.svg" class="collectionImg">
+                                    <p class="collectionTitle">Collection Title 2</p>
+                                </div>
+                                <div class="collectionContainer">
+                                    <input type="checkbox" class="collectionSelection m-3" id="c3">
+                                    <img src="../images/collections/7.svg" class="collectionImg">
+                                    <p class="collectionTitle">Collection Title 3</p>
+                                </div>
+                                <div class="collectionContainer">
+                                    <input type="checkbox" class="collectionSelection m-3" id="c4">
+                                    <img src="../images/collections/10.svg" class="collectionImg">
+                                    <p class="collectionTitle">Collection Title 4</p>
+                                </div>
+                                <div class="collectionContainer">
+                                    <input type="checkbox" class="collectionSelection m-3" id="c5">
+                                    <img src="../images/collections/4.svg" class="collectionImg">
+                                    <p class="collectionTitle">Collection Title 5</p>
+                                </div>
+                            </fieldset>
+                            <button type="submit" class="main-button-brown-small mb-4" id="submitCollectionChoice">Choose Collections</button>
+                        </form>
+                    </div>
+                    <span class="closeCollection">&times;</span>
                 </div>
 
             </div>
@@ -223,10 +261,10 @@
                                         &#9733; &#9733; &#9733; &#9733; &#9733; | <a href="#">View Reviews (10)</a>
                                     </div>
                                     <div class="iconsContainer">
-                                        <button class="unstyled-button">
+                                        <button class="unstyled-button openCollectionPopup">
                                             <img class="icon" src="../images/addToCollection.svg" title="Add to Collection">
                                         </button>
-                                        <button type="button" class="unstyled-button openPopup">
+                                        <button type="button" class="unstyled-button openReviewPopup">
                                             <img class="icon" src="../images/review.svg" title="Leave a Review">
                                         </button>
                                     </div>
@@ -246,12 +284,27 @@
 
                 // event delegation
                 document.addEventListener("click", e => {
-                    if (e.target.closest(".openPopup")) {
-                        popup.style.display = "grid";
+                    if (e.target.closest(".openReviewPopup")) {
+                        const litDiv = e.target.closest(".lit");
+                        const titleText = litDiv.querySelector(".litTitle").textContent.trim();
+                        const title = document.getElementById("reviewTitle");
+                        title.innerHTML = `Review "${titleText}"`;
+
+                        popupReview.style.display = "grid";
                         popupBackdrop.style.display = "block";
                     }
-                    if (e.target.closest(".close") || e.target == popupBackdrop) {
-                        popup.style.display = "none";
+                    if (e.target.closest(".openCollectionPopup")) {
+                        const litDiv = e.target.closest(".lit");
+                        const titleText = litDiv.querySelector(".litTitle").textContent.trim();
+                        const title = document.getElementById("collectionTitle");
+                        title.innerHTML = `Add "${titleText}" to Collection`;
+
+                        popupCollection.style.display = "grid";
+                        popupBackdrop.style.display = "block";
+                    }
+                    if (e.target.closest(".closeReview") || e.target.closest(".closeCollection")) {
+                        popupReview.style.display = "none";
+                        popupCollection.style.display = "none";
                         popupBackdrop.style.display = "none";
                     }
                 });
