--- a/frontend/subpages/collections.html
+++ b/frontend/subpages/collections.html
@@ -18,8 +18,8 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <a href="../index.html"><img class="siteLogoImg" src="../images/logo.svg" alt="Logo"></a>
-                        <a href="../index.html" class="siteLogoText">TBRd</a>
+                        <a href="../index.html"><img class="site-logo-img" src="../images/logo.svg" alt="Logo"></a>
+                        <a href="../index.html" class="site-logo-text">TBRd</a>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
@@ -82,7 +82,7 @@
 
         <section class="d-flex flex-column align-items-center text-center">
 
-            <div class="sectionContentHolderClear mt-4 mb-4">
+            <div class="section-content-holder-clear mt-4 mb-4">
 
                 <div class="browserContainer" id="results">
 
@@ -155,7 +155,7 @@
                                 <label> Share your thoughts on this literature. </label>
                                 <textarea rows="5" style="width: 75%;" id="reviewText"></textarea>
                             </fieldset>
-                            <button type="submit" class="mainButtonBrownSmall mb-4" id="submitReview">Submit Review</button>
+                            <button type="submit" class="main-button-brown-small mb-4" id="submitReview">Submit Review</button>
                         </form>
                     </div>
                     <span class="close">&times;</span>
