--- a/frontend/subpages/contactUs.html
+++ b/frontend/subpages/contactUs.html
@@ -18,8 +18,8 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <a href="../index.html"><img class="siteLogoImg" src="../images/logo.svg" alt="Logo"></a>
-                        <a href="../index.html" class="siteLogoText">TBRd</a>
+                        <a href="../index.html"><img class="site-logo-img" src="../images/logo.svg" alt="Logo"></a>
+                        <a href="../index.html" class="site-logo-text">TBRd</a>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
@@ -85,7 +85,7 @@
             <h2 class="sub-title-text" style="font-weight: bold;"> Contact Us </h2>
 
             <div class="d-flex flex-column align-items-center text-center">
-                <div class="sectionContentHolderGreen" style="padding-bottom: 0;">
+                <div class="section-content-holder-green" style="padding-bottom: 0;">
 
                     <p> <h2 style="font-weight: bold; margin: 1vw;" class="mb-5"> Tell us what we can help you with! </h2> </p>
                     <hr style="background-color: var(--offWhite); width: 80%;">
@@ -104,7 +104,7 @@
                             <textarea name="message" rows="5" style="width: 100%;" required></textarea>
                         </fieldset>
                         <fieldset>
-                            <button type="submit" class="mainButtonBrownSmall mt-4">Submit Form</button>
+                            <button type="submit" class="main-button-brown-small mt-4">Submit Form</button>
                         </fieldset>
                     </form>
 
@@ -124,25 +124,6 @@
         <!-- Script for checking user login and logout functionality-->
         <script type="module" src="../js/session.js"></script>
 
-        <!-- Script for review popup -->
-        <script>
-            document.addEventListener("DOMContentLoaded", () => {
-                const popup = document.getElementById("popup");
-                const openPopup = document.getElementById("openPopup");
-                const closeBtn = document.querySelector(".close");
-
-                // Make sure it's closed initially
-                popup.style.display = "none";
-
-                openPopup.addEventListener("click", () => {
-                    popup.style.display = "grid";
-                });
-
-                closeBtn.addEventListener("click", () => {
-                    popup.style.display = "none";
-                });
-            });
-        </script>
     </body>
 
 </html>
