--- a/frontend/userPages/myReads.html
+++ b/frontend/userPages/myReads.html
@@ -18,8 +18,8 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <a href="../index.html"><img class="siteLogoImg" src="../images/logo.svg" alt="Logo"></a>
-                        <a href="../index.html" class="siteLogoText">TBRd</a>
+                        <a href="../index.html"><img class="site-logo-img" src="../images/logo.svg" alt="Logo"></a>
+                        <a href="../index.html" class="site-logo-text">TBRd</a>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
@@ -83,7 +83,7 @@
         <section>
 
             <div class="d-flex flex-column align-items-center text-center">
-                <div class="sectionContentHolderClear">
+                <div class="section-content-holder-clear">
 
                     <h1 class="title-text">My Reads</h1>
 
