--- a/frontend/userPages/settings.html
+++ b/frontend/userPages/settings.html
@@ -18,8 +18,8 @@
                 <div class="d-flex justify-content-between align-items-center">
 
                     <div class="row left-div">
-                        <a href="../index.html"><img class="siteLogoImg" src="../images/logo.svg" alt="Logo"></a>
-                        <a href="../index.html" class="siteLogoText">TBRd</a>
+                        <a href="../index.html"><img class="site-logo-img" src="../images/logo.svg" alt="Logo"></a>
+                        <a href="../index.html" class="site-logo-text">TBRd</a>
                     </div>
 
                     <div class="dropdown d-flex justify-content-center right-div">
@@ -82,7 +82,7 @@
 
         <section class="d-flex flex-column align-items-center text-center">
 
-            <div class="sectionContentHolderClear mt-4 mb-4">
+            <div class="section-content-holder-clear mt-4 mb-4">
 
                 <div class="settingsSection">
                     <div class="settingsCategories">
@@ -101,7 +101,7 @@
                             <fieldset>
                                 <label> Set Bio </label> <br>
                                 <textarea style="width: 75%;" rows="5"></textarea> <br>
-                                <button type="submit" class="mainButtonBrownXSmall mt-2" id="submitReview">Update Bio</button>
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview">Update Bio</button>
                             </fieldset>
                             <fieldset>
                                 <label> Choose Favorite Genres </label> <br>
@@ -110,7 +110,7 @@
                                     <option> Comedy </option>
                                     <option> Romance </option>
                                 </select> <br>
-                                <button type="submit" class="mainButtonBrownXSmall mt-2" id="submitReview">Add to Favorites</button>
+                                <button type="submit" class="main-button-brown-xsmall mt-2" id="submitReview">Add to Favorites</button>
                             </fieldset>
                             <fieldset>
                                 <label> Favorite Book </label> <br>
