--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -87,6 +87,9 @@
                     <img id="profileAvatar" src="../images/loggedOutPFP.svg" class="userPFP mb-2">
                     <div id="profileUsername" class="userName">Loading...</div>
                     <div id="profileCreatedAt"></div>
+                    <div id="followInfo" class="mt-2">
+                        <span id="followerCount">0 followers</span> • <span id="followingCount">0 following</span>
+                    </div>
                     <button id="editProfileBtn" class="mainButtonBrownSmall mt-3">Edit Profile</button>
                 </div>
             </div>
