Hopefully follow/unfollow button and planned functionality for viewing other profiles

--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -90,6 +90,7 @@
                     <div id="followInfo" class="mt-2">
                         <span id="followerCount">0 followers</span> • <span id="followingCount">0 following</span>
                     </div>
+                    <button id="followBtn" class="main-button-brown-xsmall mt-3" style="display:none;">Follow</button>
                     <button id="editProfileBtn" class="main-button-brown-small mt-3">Edit Profile</button>
                     <button id="makeCollection" class="main-button-brown-small mt-3 openReviewPopup">Make Collection</button>
                 </div>
