Changed the My Reads section on profile to My Reviews

--- a/frontend/userPages/profile.html
+++ b/frontend/userPages/profile.html
@@ -143,8 +143,8 @@
                 </span>
 
                 <span class="third-section-brown m-3">
-                    <div class="third-section-topper-brown">My Reads</div>
-                    <div id="profileReads" class="third-section-text">Loading Your Reads...</div>
+                    <div class="third-section-topper-brown">My Reviews</div>
+                    <div id="profileReviews" class="third-section-text">Loading Reviews...</div>
                 </span>
 
                 <span class="third-section-brown m-3">
