Removed "Trending" button from index. Should no longer display incorrect pfp in nav bar when viewing somebody else's profile

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,8 +91,8 @@
                     <p style="margin-bottom: 3vw;">
                         Letterboxd reshaped how people connect over movies, a
                         sleek, social platform where you can log, review, and discover
-                        through community. We’re bringing that same idea to literature, but
-                        with a modern twist designed for today’s readers: not just novels,
+                        through community. We're bringing that same idea to literature, but
+                        with a modern twist designed for today's readers: not just novels,
                         but also plays, short stories, and essays. Our app will let users: Log
                         their reading journey quickly, from anywhere. Review and rate
                         works to spark meaningful conversation. Browse and follow public
@@ -102,11 +102,11 @@
                         community that feels alive and approachable. Unlike Goodreads,
                         which feels dated and transactional, our platform is clean, intuitive,
                         and designed for busy young professionals who want discovery,
-                        connection, and inspiration without the clutter. In short: we’re
+                        connection, and inspiration without the clutter. In short: we're
                         making reading fun and shareable again, a platform that fits
-                        seamlessly into everyday life, whether you’re looking for your next
-                        subway read, curating a list of plays you’ve loved, or exploring
-                        someone else’s favorite short stories.
+                        seamlessly into everyday life, whether you're looking for your next
+                        subway read, curating a list of plays you've loved, or exploring
+                        someone else's favorite short stories.
                     </p>
 
                     <hr style="background-color: var(--offWhite); width: 50vw;">
@@ -115,7 +115,6 @@
                     <div class="d-flex flex-column align-items-center text-center">
                         <a href="loginPages/createAccount.html"> <button class="main-button-brown"> Create an Account </button> </a>
                         <a href="subpages/browse.html"> <button class="main-button-brown"> Start Exploring Our Library </button> </a>
-                        <a href="subpages/trending.html"> <button class="main-button-brown"> Check Out What's Trending </button> </a>
                     </div>
 
                 </div>
